home/kkleine/dev/lkml/0/32306.159226fb4a80c5f1c15a8548c1268319115d67f7
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#38: 
> > arch/ppc/mm/init.c:381: error: subscripted value is neither array nor pointer

WARNING:TYPO_SPELLING: 'explicitely' may be misspelled - perhaps 'explicitly'?
#56: 
First, why the heck do you use indices 0 and 1 explicitely rather than
                                               ^^^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.32306.commit.159226fb4a80c5f1c15a8548c1268319115d67f7 total: 0 errors, 2 warnings, 0 checks, 15 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.32306.commit.159226fb4a80c5f1c15a8548c1268319115d67f7 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
